variables.RunFour.scala.error
Compilation error:
RunFour:1: error: type mismatch;
 found   : Boolean
 required: String
var x: String = estSurBiscuit
                ^RunFour:2: error: type mismatch;
 found   : Int(0)
 required: String
x=0
  ^RunFour:3: error: type mismatch;
 found   : Int(3)
 required: String
while (x<3) {
         ^